--- a/terrazzo/assets/css/generated.css
+++ b/terrazzo/assets/css/generated.css
@@ -93,6 +93,41 @@ li.title-f34483a:hover, li.title-f34483a.selected-f34483a {
   visibility: visible;
 }
 
+.show-separator-f34483a {
+  display: block;
+  visibility: visible;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  position: relative;
+}
+.show-separator-f34483a::before {
+  content: "";
+  width: 10px;
+  height: 100%;
+  left: -10px;
+  position: absolute;
+  background-color: rgba(255, 0, 0, 0.5);
+}
+.show-separator-f34483a:first-child::before {
+  left: 0px;
+}
+.show-separator-f34483a:hover {
+  background-color: rgb(255, 0, 0);
+}
+.show-separator-f34483a.hover-separator-f34483a::before {
+  width: 30px;
+  left: 0px;
+  position: relative;
+  background-color: rgba(0, 255, 0, 0.5);
+}
+
+.hide-separator-f34483a {
+  display: none;
+  visibility: hidden;
+}
+
 .terminals-ed8a36b {
   width: 100%;
   height: 100%;
