--- a/game/src/game.scss
+++ b/game/src/game.scss
@@ -1,18 +1,11 @@
 .game {
     position: relative;
+}
+
+.board {}
+
+.game,
+.board {
     width: 100%;
     height: 100%;
-    --color: black;
-    --link-color: blue;
-    --background-color: black;
-    background-color: var(--background-color);
-
-    .game-board {
-        width: 100%;
-        height: 100%;
-    }
-
-    .cookie {
-        position: absolute;
-    }
 }
