--- a/framework/terrazzo/src/client_impl/widgets/tabs.scss
+++ b/framework/terrazzo/src/client_impl/widgets/tabs.scss
@@ -7,6 +7,7 @@
 
 .titles {
     flex-grow: 0;
+    z-index: 1;
 
     >ul {
         list-style: none;
@@ -28,6 +29,7 @@ li.title {
 
 .items {
     flex-grow: 1;
+    z-index: 0;
 
     &>ul {
         list-style: none;
