--- a/demo/src/demo/attributes.scss
+++ b/demo/src/demo/attributes.scss
@@ -1,5 +1,10 @@
-.dynamic-only {
+.rbox {
     margin: 5px 0 5px 0;
     padding: 5px;
     border: 1px solid green;
+}
+
+.active {
+    background-color: #29cd00;
+    background-image: none;
 }
